[gd_scene load_steps=3 format=3 uid="uid://cax3wphuotfc1"]

[ext_resource type="Script" path="res://addons/drpgmapeditor/rpg_map_editor.gd" id="1_lk6rd"]
[ext_resource type="Script" path="res://addons/drpgmapeditor/map_viewer.gd" id="2_3i8hq"]

[node name="RPGMapEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_lk6rd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="New" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "New"

[node name="Open" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Open"

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Save"

[node name="SaveAs" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Save as..."

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Width"

[node name="WidthValue" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
min_value = 1.0
value = 1.0
rounded = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Height"

[node name="HeightValue" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
min_value = 1.0
value = 1.0
rounded = true

[node name="ApplyNewSize" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Apply new size"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="PlayerStartPos" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Player Start Pos"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "x"

[node name="StartPosX" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
rounded = true

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "y"

[node name="StartPosY" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
rounded = true

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="PanelContainer" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/PanelContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MapViewer" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer2/PanelContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_3i8hq")

[node name="MapDataOpen" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
ok_button_text = "Open"
file_mode = 0

[node name="MapDataSave" type="FileDialog" parent="."]
unique_name_in_owner = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SaveAs" to="." method="_on_save_as_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ApplyNewSize" to="." method="_on_apply_new_size_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer3/StartPosX" to="." method="_on_start_pos_x_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer3/StartPosY" to="." method="_on_start_pos_y_value_changed"]
[connection signal="file_selected" from="MapDataOpen" to="." method="_on_map_data_open_file_selected"]
[connection signal="file_selected" from="MapDataSave" to="." method="_on_map_data_save_file_selected"]
